# server

./: .gitignore  CMakeLists.txt  README  README.md  _build.cmd  _clear_dir.cmd  _start.cmd  file_manager.cpp  logger.cpp  server.cpp
files/db/: users.db
files/web/: app.js  app1.js  entering_form.html  extended_calculator.html  index.html  index1.html  styles.css  styles1.css
files/web/errors/404/: index.html
modules/process_request/: file_manager.cpp  process_request.cpp  server_utilities.cpp
modules/utility/: logger.cpp  utility.h
src/: main.cpp
src/calc/include/: RPN.h  Tokenizer.h
src/calc/src/: RPN.cpp  Token.cpp  Tokenizer.cpp  calculator.cpp
src/db/: db.h
src/process_request/: file_manager.cpp  process_request.cpp  server_utilities.cpp
src/utility/: logger.cpp  utility.h  variables.h
